@@ -3,7 +3,10 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 public class GeneralTask {
@@ -19,10 +22,6 @@ public class GeneralTask {
     
     private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd");
     
-    public static LocalDate parseDate(String date) {
-        return LocalDate.parse(date, DateTimeFormatter.ofPattern("yyyy-MM-dd"));
-    }
-
     public GeneralTask(String title, String description, String dueDate, String category, String priority) {
         this.title = title;
         this.description = description;
@@ -162,60 +161,109 @@ public class GeneralTask {
     // Convert GeneralTask to a CSV-compatible string
     @Override
     public String toString() {
-        String dependenciesString = String.join(";", dependencies.stream().map(String::valueOf).toArray(String[]::new));
-        String nextDateString = nextCreationDate == null ? "" : nextCreationDate.toString();
-        return String.format("%s,%s,%s,%s,%s,%b,%s,%s,%s", 
-            title, 
-            description, 
-            dueDate, 
-            category, 
-            priority, 
-            isComplete, 
-            dependenciesString, 
-            recurrence, 
-            nextDateString
+        String dependencyStr = dependencies.isEmpty() ? "None" : dependencies.stream()
+                .map(String::valueOf)
+                .collect(Collectors.joining(", "));
+        String recurrenceStr = (recurrence == null || recurrence.isEmpty()) ? "None" : recurrence;
+        String nextDateStr = (nextCreationDate == null) ? "Not Set" : nextCreationDate.toString();
+
+        return String.format(
+                "Title: %s\nDescription: %s\nDue Date: %s\nCategory: %s\nPriority: %s\nStatus: %s\nDependencies: %s\nRecurrence: %s\nNext Creation Date: %s",
+                title, description, dueDate, category, priority, isComplete ? "Complete" : "Incomplete",
+                dependencyStr, recurrenceStr, nextDateStr
         );
     }
-    
+
     public void toggleCompleted() {
         this.isComplete = !this.isComplete;
         // Call StorageSystem to save updated task list after toggling completion
-        StorageSystem.saveTasksToCSV();  // Ensure that save method is called here
-    }
-    // Method to convert Task to CSV format
-    public String toCSVFormat() {
-    return title + "," +
-           description + "," +
-           dueDate + "," +
-           category + "," +
-           priority + "," +
-           isComplete() + "," +
-           String.join(";", dependencies.stream().map(String::valueOf).collect(Collectors.toList())) + "," +
-           recurrence + "," +
-           (nextCreationDate != null ? nextCreationDate : "");
     }
     
+    // Method to convert Task to CSV format
+    public String toCSV() {
+        return String.format("\"%s\",\"%s\",\"%s\",\"%s\",\"%s\",\"%s\",\"%s\",\"%s\",\"%s\"",
+                escapeCsvField(getTitle()),
+                escapeCsvField(getDescription()),
+                escapeCsvField(getDueDate()),
+                escapeCsvField(getCategory()),
+                escapeCsvField(getPriority()),
+                isComplete ? "complete" : "incomplete",
+                escapeCsvField(String.join(";", dependencies.stream().map(String::valueOf).collect(Collectors.toList()))),
+                escapeCsvField(getRecurrence()),
+                nextCreationDate != null ? nextCreationDate.toString() : "");
+    }
+
+    // Helper to escape commas and quotes in fields
+    private String escapeCsvField(String field) {
+        if (field == null) {
+            return "";
+        }
+        return field.contains(",") || field.contains("\"") ? "\"" + field.replace("\"", "\"\"") + "\"" : field;
+    }
+
     // Factory method to create a GeneralTask from a CSV line
     public static GeneralTask fromCSV(String csvLine) {
         String[] fields = csvLine.split(",", -1); // Handle empty fields gracefully
+
+        // Ensure the fields have the correct number of columns (9 in total now)
+        if (fields.length != 9) {
+            throw new IllegalArgumentException("Invalid CSV format. Expected 9 fields.");
+        }
+
         String title = fields[0];
         String description = fields[1];
         String dueDate = fields[2];
         String category = fields[3];
         String priority = fields[4];
-        boolean isComplete = Boolean.parseBoolean(fields[5]);
-        List<Integer> dependencies = parseDependencies(fields[6].isEmpty() ? null : fields[6]);// Convert dependency string to List<Integer>
+        boolean isComplete = fields[5].equalsIgnoreCase("complete");
+        List<Integer> dependencies = parseDependencies(fields[6].isEmpty() ? null : fields[6]); // Convert dependency string to List<Integer>
         String recurrence = fields[7];
-        LocalDate nextCreationDate = fields[8].isEmpty() ? null : LocalDate.parse(fields[8]);
-        
-        return new GeneralTask(title, description, dueDate, category, priority, isComplete, dependencies, recurrence, nextCreationDate);
+        // Parse nextCreationDate directly
+        LocalDate parsedLocalDate = parseNextCreationDate(fields[8]);
+
+        // Create and return the GeneralTask object
+        return new GeneralTask(title, description, dueDate, category, priority, isComplete, dependencies, recurrence, parsedLocalDate);
     }
     // Helper to parse dependencies
-    private static List<Integer> parseDependencies(String dependencyString) {
-        if (dependencyString == null || dependencyString.isEmpty()) {
-            return List.of();
+    private static List<Integer> parseDependencies(String dependenciesStr) {
+        if (dependenciesStr == null || dependenciesStr.trim().isEmpty()) {
+            return Collections.emptyList();
         }
-        String[] depArray = dependencyString.split(";");
-        return List.of(depArray).stream().map(Integer::parseInt).toList();
+        return Arrays.stream(dependenciesStr.split("[,;]")) // Allow both ',' and ';' as delimiters
+                .map(dep -> {
+                    try {
+                        return Integer.parseInt(dep.trim());
+                    } catch (NumberFormatException e) {
+                        System.out.println("Invalid dependency: " + dep);
+                        return null;
+                    }
+                })
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+    }
+    // Helper method to parse date with error handling
+    private static LocalDate parseDate(String dateString) {
+        if (dateString == null || dateString.isEmpty()) {
+            return null; // Return null if the date string is empty
+        }
+
+        try {
+            return LocalDate.parse(dateString); // Parse string into LocalDate
+        } catch (DateTimeParseException e) {
+            System.err.println("Error parsing date: " + dateString);
+            return null; // Return null or handle the error if necessary
+        }
+    }
+    // Helper method to parse next creation date
+    public static LocalDate parseNextCreationDate(String dateStr) {
+        if (dateStr == null || dateStr.trim().isEmpty()) {
+            return null;  // Return null if the date string is empty or null
+        }
+        try {
+            return LocalDate.parse(dateStr);  // Attempt to parse the date string
+        } catch (DateTimeParseException e) {
+            System.out.println("Invalid date format: " + dateStr);  // Print error message
+            return null;  // Return null if parsing fails
+        }
     }
 }
